--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,9 @@
         --heder-footer: #2f303a;
         --border--headr: #ececec;
         --buttun: #188ce8;
-        --border--icon: #eeeeee;}
+        --border--icon: #eeeeee;
+        --link-f-in-twit: #afb1b8;
+        --outline--background-color: #c4c4c4;}
     *,
     *::before,
     *::after {
@@ -120,19 +122,33 @@ address {
 .contact-link {
     color: var(--title-text-color);
     text-decoration: none;
-    padding: 32px 0;}
+    padding: 32px 0;
+    display: flex;
+    align-items: center;}
+.contact-link .icon-contact {
+    margin-right: 10px;
+    fill: currentColor;}
+.contact.list {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;}
 
 .contact-link:hover,
 .contact-link:focus {
     color: var(--accent-color);}
 .hero {
     padding-top: 200px;
-    padding-bottom: 200px}
+    padding-bottom: 200px;
+    background-color: var(--outline--background-color);}
 .hero, .footer {
     background-color: var(--heder-footer);}
 .footer{
-    padding: 60px 0;
-}
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: var(--heder-footer);}
+.footer-container {
+    display: flex;
+    align-items: baseline;}
 .hero-title {
     color: var(--primary-bg-color);
     font-family: 'Roboto';
@@ -161,7 +177,7 @@ address {
 .button {
     font-family: 'Roboto';
     cursor: pointer;
-    border: none;
+    border: 1px solid transparent;
     display: block;
     font-size: 16px;
     text-align: center;
@@ -171,8 +187,6 @@ address {
 .button.secodary {
     color: var(--primari-text-color);
     background-color: var(--background);
-    min-width: 73px;
-    height: 38px;
     padding: 6px 22px;
     line-height: 1.6;
     letter-spacing: 0.03em;
@@ -233,6 +247,8 @@ address {
 .section {
     padding-top: 94px;
     padding-bottom: 94px;}
+.section-sidebar {
+    padding-top: 0;}
 .section-title {
     color: var(--primari-text-color);
     font-weight: 700;
@@ -271,6 +287,23 @@ address {
 .footer-list {
     font-style: normal;
     margin-top: 20px;}
+.team-list-link {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 0 32px;}
+.team-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--link-f-in-twit);}
+.team-link:hover,
+.team-link:focus {
+    color: var(--team-text--background);
+    background-color: var(--accent-color);}
 .footer-link,
 .footer-studio {
     color: var(--primary-bg-color);
@@ -278,8 +311,12 @@ address {
 .footer-contact {
     color: var(--contact);
     text-decoration: none;}
+.footer-logo-contact {
+    margin-right: 70px;}
 .footer .list {
     line-height: 1.7;}
+.footer-list-link {
+    display: flex;}
 
 .footer-link:hover,
 .footer-link:focus {
@@ -333,6 +370,103 @@ address {
     font-size: 18px;
     line-height: 36px;
     letter-spacing: 0.06em;}
+
+
+/* ===SVG===*/
+
+.overlay {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 1px solid var(--outline--background-color);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/work.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.icon-background {
+    display: inline-flex;
+    width: 270px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--background);
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    background-position: center;}
+
+.icon-feature {
+    background-repeat: no-repeat;
+    background-size: contain;}
+
+.team-svg {
+    fill: currentColor;}
+.svg-logo {
+    display: flex;}
+.svg-logo-list:not(:last-child) {
+    width: calc((100% - 150px) / 6);
+    margin-right: 30px;
+}
+
+.svg-logo-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid var(--link-f-in-twit);
+    border-radius: 4px;
+    color: var(--link-f-in-twit);}
+
+.icon-svg {
+    fill: currentColor;}
+
+.svg-logo-link:hover,
+.svg-logo-link:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);}
+
+.title-svg {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: var(--primary-bg-color);}
+
+.list-svg:not(:last-child) {
+    margin-right: 10px;}
+
+.footer-link-svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--primary-bg-color);
+    background-color: rgba(255, 255, 255, 0.1);}
+
+.footer-link-svg:hover,
+.footer-link-svg:focus {
+    background-color: var(--accent-color);}
+.footer-cont-list {
+    margin-top: 20px;}
+
+.footer-svg {
+    fill: currentColor;}
+
+.portfolio-link {
+    color: var(--primari-text-color);
+    text-decoration: none;}
+.portfolio-link:hover,
+.portfolio-link:focus {
+    display: block;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);}
 
 
 
