--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,7 @@ address {
     margin-right: auto;
     outline: 1px solid var(--outline--background-color);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/work.jpg');
+        url('../images/hero.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
