--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
         --primari-text-color: #212121;
         --title-text-color: #757575;
+        --team-text--background: #ffffff;
         --accent-color: #2196f3;
         --primary-bg-color: #ffffff;
         --studio: #000000;
