--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ address {
     font-size: 16px;
     line-height: 1.2;}
 .aside {
-    padding: 30px 0;
+    padding: 30px 2px;
     text-align: center;}
 .footer-list {
     font-style: normal;
@@ -292,7 +292,8 @@ address {
     display: flex;
     justify-content: center;
     gap: 10px;
-    padding: 0 32px;}
+    padding: 0 32px;
+    margin-top: 16px}
 .team-link {
     display: flex;
     align-items: center;
