--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,8 @@ address {
 .team-list p {
     color: var(--title-text-color);
     font-size: 16px;
-    line-height: 1.2;}
+    line-height: 1.2;
+    margin-bottom: 10px;}
 .aside {
     padding: 30px 2px;
     text-align: center;}
@@ -292,8 +293,7 @@ address {
     display: flex;
     justify-content: center;
     gap: 10px;
-    padding: 0 32px;
-    margin-top: 16px}
+    padding: 0 32px;}
 .team-link {
     display: flex;
     align-items: center;
