--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,7 @@ address {
     line-height: 1.2;
     margin-bottom: 16px;}
 .aside {
-    padding: 30px 2px;
+    padding: 30px;
     text-align: center;}
 .footer-list {
     font-style: normal;
@@ -292,8 +292,7 @@ address {
 .team-list-link {
     display: flex;
     justify-content: center;
-    gap: 10px;
-    padding: 0 32px;}
+    gap: 10px;}
 .team-link {
     display: flex;
     align-items: center;
